[project]
name = "op-query"
version = "0.0.1"
description = "Programmatically edit overpass queries. Wrapper for overpy package"
authors = [{ name = "Sean Hwang", email = "your.email@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "overpy>=0.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"