[project]
name = "op-query-builder"
version = "0.0.1"
description = "Programmatically build overpass queries. Powered by overpy package"
authors = [{ name = "Sean Hwang", email = "your.email@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "overpy>=0.7",
    "pytest>=8.3.5"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]